# Xsens_Fox

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
.github/workflows/: release.yml  tests.yml
Plugins/BlenderProject/: README.txt  setup_testproject.py  testproject.blend
Plugins/MVNBlenderPlugin-main/: __init__.py  config.ini  file_logger.py  icons.py  logger.py  pose.py  receiver.py  recorder.py  source_animator.py  source_manager.py  ui.py  utility.py
Plugins/XsensLivc/Content/: SM_Maya_Puppet_Mesh.uasset
Plugins/XsensLivc/Source/LiveLinkMvnPlugin/Public/: LiveLinkMvnRemapper.h  LiveLinkMvnSource.h
Plugins/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/RemoteControl/: MvnRemoteControlClientPanel.cpp
Plugins/XsensLivc/Source/LiveLinkMvnPluginEditor/Public/Customizations/: MapBuilder.h
Plugins/logger/MVNBlenderPlugin-main/: README.md  logger.py  pose.py  receiver.py  recorder.py  segment_maps.py  source_animator.py  source_manager.py  ui.py
Plugins/logger/MVNBlenderPlugin-main/icons/: Mvn_Blender_Icons.psd
Plugins/logger/XsensLivc/Content/: SKEL_MVN_Puppet_Tpose_Skeleton.uasset
Plugins/logger/XsensLivc/Source/LiveLinkMvnPlugin/: LiveLinkMvnPlugin.Build.cs
Plugins/logger/XsensLivc/Source/LiveLinkMvnPlugin/Private/: FoxLog.cpp  FoxLog.h  LiveLinkMvnPlugin.cpp  LiveLinkMvnRemapper.cpp  LiveLinkMvnRetargetAsset.cpp  LiveLinkMvnSettings.cpp  LiveLinkMvnSource.cpp  LiveLinkMvnTransformController.cpp  MvnLiveLinkMessageBusSource.cpp  ParserManager.cpp
Plugins/logger/XsensLivc/Source/LiveLinkMvnPlugin/Public/: LiveLinkMvnSourceFactory.h
Plugins/logger/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/: LiveLinkMvnEditorModule.cpp
Plugins/logger/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/Customizations/: LiveLinkMvnEditorUtilities.cpp  SLiveLinkMvnSubjectRepresentationPicker.cpp
Plugins/logger/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/RemoteControl/: MvnRemoteControlNewSessionWidget.cpp
Plugins/logger/XsensLivc/Source/LiveLinkMvnPluginEditor/Public/: LiveLinkMvnEditorModule.h
Plugins/logger/XsensLivc/Source/XSensLLWrapper/Private/: MvnWrapper.cpp
Plugins/logger/XsensLivc/Source/XSensLLWrapper/Public/: MvnWrapper.h
Plugins/standart/MVNBlenderPlugin-main/: __init__.py  config.ini  pose.py  rigging.py  source_animator.py  ui.py
Plugins/standart/XsensLivc/: LiveLinkMvnPlugin.uplugin
Plugins/standart/XsensLivc/Content/: SKEL_MVN_Puppet_Fingers_Skeleton.uasset  SKEL_Maya_Puppet_Skeleton.uasset  SK_MVN_Puppet_Tpose.uasset
Plugins/standart/XsensLivc/Source/LiveLinkMvnPlugin/: LiveLinkMvnPlugin.Build.cs
Plugins/standart/XsensLivc/Source/LiveLinkMvnPlugin/Private/: LiveLinkMvnRemapper.cpp  LiveLinkMvnSourceEditor.cpp
Plugins/standart/XsensLivc/Source/LiveLinkMvnPlugin/Public/: LiveLinkMvnSettings.h  SegmentIndices.h
Plugins/standart/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/: MvnPluginEditorSubsystem.cpp
Plugins/standart/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/Customizations/: LiveLinkMvnRetargetAssetCustomization.cpp  XsensRemapAction.cpp
Plugins/standart/XsensLivc/Source/LiveLinkMvnPluginEditor/Private/RemoteControl/: MvnRemoteControlUtils.cpp
dll/: fox_sensor_placement_classifier.onnx
gumanoid/: ABP_MVN_Puppet_LiveLink.uasset  BP_MvnHumanoid.uasset  MVN_remap_example.uasset  SKEL_MVN_Puppet_Fingers_Skeleton.uasset  SK_MVN_Puppet_Fingers_Mesh_Skeleton.uasset
installer/: fox_mocap.iss
installer/drivers/: DUB-13X2_USB3_Gigabit_Drivers.msi
logs/: alllog.txt
old/: main.cpp  main.h
scr/: formules.txt  foxbody.cpp  foxbody.h  foxcoupling.cpp  foxcoupling.h  foxergo.cpp  foxergo.h  foxmath.cpp  foxmath.h  foxwire.cpp  foxwire.h  main.cpp  main.h  resources.qrc
scr/fusion/: FoxKf.cpp  FoxKf.h  Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionCompass.c  FusionCompass.h  FusionConvention.h  FusionMath.h  FusionModel.h  FusionRemap.h
tests/: CMakeLists.txt  foxtest.h  test_foxmath.cpp  test_foxwire.cpp
tests/python/: fox_kf_mirror.py  log_fixtures.py  quat_math.py  run_all.py  test_actor_dimensions.py  test_calibration_log_replay.py  test_default_angles.py  test_diff_streams.py  test_dummy_stubs_under_tilt.py  test_ecompass_to_triad_fallback.py  test_finger_adaptive_alpha.py  test_finger_anatomy.py  test_foot_sock_orientation.py  test_fox_kf_mag_disable.py  test_fox_kf_nan_recovery.py  test_fox_kf_per_segment.py  test_fox_kf_static_source.py  test_full_yaw_invariance.py  test_global_yaw.py  test_glove_stream_layout.py  test_heel_toe_anchor.py  test_heel_toe_gait.py  test_hemisphere_normalization.py  test_jump_phase.py  test_kf_bias_longterm.py  test_kf_prior_wiring.py  test_locomotion_thresholds.py  test_metadata_per_plugin.py  test_pair_symmetry_fallback.py  test_palm_with_glove_sensor.py  test_per_sensor_asymmetry.py  test_pose_hysteresis.py  test_pose_separation_matrix.py  test_pose_transition_z.py  test_procrustes_asymmetric_mount.py  test_recap_time_based.py  test_s2s_180_flip.py  test_shoulder_cone.py  test_static_z_drift.py  test_stream_frame.py  (+11 more)
tools/: README.md  diff_streams.py  sim_blender_pipeline.py  verify_axes.py  verify_calibration.py  verify_glove_mirror.py  verify_streaming.py
